# linlib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
src/matrices/: compressedmatrix.h  compressedmatrixelementacessor.h  compressedmatrixiterator.h  compressedmatrixiteratortraits.h  compressedmatrixleftmultiplieradaptor.h  compressedmatrixtraits.h  densematrix.h  densematrixelementacessor.h  densematrixiterator.h  densematrixiteratortraits.h  densematrixtraits.h  matrix.h  matrixelementacessor.h  matrixiterator.h  matrixleftmultiplieradaptor.h  matrixsubtraction.h  matrixsummation.h  matrixutils.h  pointermatrix.h  pointermatrixelementacessor.h  pointermatrixelementproxy.h  pointermatrixiterator.h  pointermatrixiteratortraits.h  pointermatrixtraits.h
src/solvers/: biconjugategradientmethod.h  conjugategradientmethod.h  gradientmethod.h  ludecompositor.h  stabilizedbiconjugategradientmethod.h  substitutionmethod.h
test/functional/: test_fdm.cpp  test_fem.cpp
test/unit/matrices/: test_compressedmatrix.cpp  test_compressedmatrixiterator.cpp  test_densematrix.cpp  test_densematrixiterator.cpp  test_matrix.h  test_matrixiterator.h
test/unit/solvers/: test_biconjugategradientmethod.cpp  test_conjugategradientmethod.cpp  test_gradientmethod.cpp  test_ludecompositor.cpp  test_stabilizedbiconjugategradientmethod.cpp  test_substitutionmethod.cpp
